# reviewr

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  MULTI_PLATFORM_ARCHITECTURE.md  README.md  USER_GUIDE.md  future.md  impl-plan.md  int-testing.md  justfile  log.md  multi-system-integration-plan.md  non-blocking-proposal.md  plan1.md  simplified-impl-plan.md  ux.md
.github/workflows/: ci.yml  release.yml
impl-detail/: possible-issues.md  review-command-behavioral-requirements.md  ux.md
src/: lib.rs  main.rs  test_fixtures.rs
src/cli/: mod.rs
src/core/: config.rs  employee.rs  fetch_progress.rs  gerrit.rs  gitlab.rs  jira.rs  mod.rs  models.rs  notes.rs  platform.rs  unified_config.rs
src/terminal/: mod.rs
src/tui/: employee_form.rs  mod.rs  multi_platform_browser.rs  multi_platform_browser_tests.rs  review_browser.rs  selector.rs
tests/: config_error_tests.rs  error_reporting_tests.rs  integration_test.rs  security_tests.rs
