[package]
name = "eval"
version = "0.1.5"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
arboard = "3.6.0"
url = "2.5.4"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
cargo-edit = "0.13.0"
wait-timeout = "0.2.0"
