[package]
name = "reviewr"
version = "1.0.5"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
arboard = "3.6.0"
url = "2.5.4"
ratatui = "0.28.0"
crossterm = "0.28.0"
nucleo = "0.5.0"
log = "0.4"
env_logger = "0.11"
fs4 = "0.6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22"
urlencoding = "2.1"
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
cargo-edit = "0.13.0"
wait-timeout = "0.2.0"
